--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "formik": "^1.5.8",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.4",
     "yup": "^0.27.0"
   },
   "scripts": {
@@ -34,6 +36,7 @@
   "devDependencies": {
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "react-test-renderer": "^16.9.0"
+    "react-test-renderer": "^16.9.0",
+    "redux-devtools": "^3.5.0"
   }
 }
